# phenix-agent-harness

./: .gitignore  .tend.json  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  biome.json  codehawk.json  devenv.yaml  flake.nix  maintenance.nix  package-lock.json  package.json  phenix-context.json  phenix-patch.json  phenix-plan.json  phenix-verification.json  result  result-3  result-4  result-list  routing-config.yaml  tmp-context-fix.txt  tsconfig.json  workflow-api-migration.py
.githooks/: pre-commit  pre-push
.github/: apply-optional-turn-budget.py  apply-workflow-session-runtime.py  correct-graceful-recovery.py  fix-graceful-patch-script.py  fix-recovery-correction.py  patch-graceful-recovery.py
commands/: archcheck.md  architecture-verify.md  codebase-overview.md  flow.md  implement.md  plan.md  route.md  verify.md
docs/: INTERFACES.md  SECURITY.md  integrations.md  phenix-tools.md  routing.md  subagents.md  workflows.md
fixtures/: git-intent-classification.yaml  git-lock-check.yaml  model-routing-cases.yaml  replay-bounded-edit.yaml  replay-generated-config.yaml  replay-go-on-resume.yaml  replay-local-dag-commit.yaml  replay-read-only-inspection.yaml  replay-scoped-commit.yaml  replay-tend-resolution.yaml  smoke-subagent-live.ts  subagent-scenarios.yaml  test-handoff-system.ts  test-subagent-executor.ts  test-subagent-process-isolation.ts  test-subagent-validator.ts  workscope-routing-cases.yaml
knowledge/: glossary.md
modules/: development.nix  flake-module.nix  package.nix  phenix-pi-package.nix  pi-packages.nix  standalone.nix  stitch.nix  (+3 more)
(+682 files in other folders)
